--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </label>
         </div>
     </div>
-    <div id="Kinematics">
+    <div id="Kinematics" >
         
         <label id="dh_table">Denavit-Hartenberg (DH) Table</label>
         <img id="axes" src="Screenshot (46).png" alt="">
@@ -354,7 +354,7 @@
         </table>
 
     </div>
-    <div class="equations">
+    <!--<div class="equations" style="width:100%">
         <label id="i1">Forward Kinematics</label>
         <label id="i2"><code>px= a1*cos(θ1)+a2*cos(θ1-θ2)</code></label>
         <label id="i3"><code>py= a1*sin(θ1)+a2*sin(θ1-θ2)</code></label>
@@ -364,7 +364,7 @@
         <label id="i7"><code>θ2=arctan((a2*sin(θ1)*px+py*a1+py*a2*cos(θ1)/(px*a1+px*a2*cos(θ1)-py*a2*sin(θ1)))</code></label>
         <label id="i8"><code>d3=d1-d4-pz</code></label>
 
-    </div>
+    </div>-->
     <div id="Operation">
         <div class="g">
             <label id="g1">Wireless Setup</label>
