--- a/index.html
+++ b/index.html
@@ -222,8 +222,10 @@
             align-items: center;
             flex-direction: column;
             border: white solid;
+            flex-wrap: wrap;
             border-width: 0px 0px 1px 0px ;
             background-color: darkblue;
+            width:100%;
         }
         #Kinematics table{
             width: 100%;
@@ -354,17 +356,17 @@
         </table>
 
     </div>
-    <!--<div class="equations" style="width:100%">
+    <div class="equations" style="width:100%">
         <label id="i1">Forward Kinematics</label>
         <label id="i2"><code>px= a1*cos(θ1)+a2*cos(θ1-θ2)</code></label>
         <label id="i3"><code>py= a1*sin(θ1)+a2*sin(θ1-θ2)</code></label>
         <label id="i4"><code>pz= d1-d3-d4</code></label>
         <label id="i5">Inverse Kinematics</label>
-        <label id="i6"><code>θ1=acos((px*px+py*py-(a1*a1+a2*a2))/(2*a1*a2))</code></label>
+        <!--<label id="i6"><code>θ1=acos((px*px+py*py-(a1*a1+a2*a2))/(2*a1*a2))</code></label>
         <label id="i7"><code>θ2=arctan((a2*sin(θ1)*px+py*a1+py*a2*cos(θ1)/(px*a1+px*a2*cos(θ1)-py*a2*sin(θ1)))</code></label>
-        <label id="i8"><code>d3=d1-d4-pz</code></label>
+        <label id="i8"><code>d3=d1-d4-pz</code></label>-->
 
-    </div>-->
+    </div>
     <div id="Operation">
         <div class="g">
             <label id="g1">Wireless Setup</label>
