--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
             background-color: darkblue;
             width:100%;
         }
+        .equations label{
+            flex-wrap:wrap;
+        }
         #Kinematics table{
             width: 100%;
             margin-bottom:10px;
@@ -356,15 +359,15 @@
         </table>
 
     </div>
-    <div class="equations" style="width:100%">
+    <div class="equations" >
         <label id="i1">Forward Kinematics</label>
         <label id="i2"><code>px= a1*cos(θ1)+a2*cos(θ1-θ2)</code></label>
         <label id="i3"><code>py= a1*sin(θ1)+a2*sin(θ1-θ2)</code></label>
         <label id="i4"><code>pz= d1-d3-d4</code></label>
         <label id="i5">Inverse Kinematics</label>
-        <!--<label id="i6"><code>θ1=acos((px*px+py*py-(a1*a1+a2*a2))/(2*a1*a2))</code></label>
+        <label id="i6"><code>θ1=acos((px*px+py*py-(a1*a1+a2*a2))/(2*a1*a2))</code></label>
         <label id="i7"><code>θ2=arctan((a2*sin(θ1)*px+py*a1+py*a2*cos(θ1)/(px*a1+px*a2*cos(θ1)-py*a2*sin(θ1)))</code></label>
-        <label id="i8"><code>d3=d1-d4-pz</code></label>-->
+        <label id="i8"><code>d3=d1-d4-pz</code></label>
 
     </div>
     <div id="Operation">
