--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             background-color: darkblue;
             width:100%;
         }
-        .equations label{
+        .equations label code{
             flex-wrap:wrap;
         }
         #Kinematics table{
