--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <label id="i4"><code>pz= d1-d3-d4</code></label>
         <label id="i5">Inverse Kinematics</label>
         <label id="i6"><code>θ1=acos((px*px+py*py-(a1*a1+a2*a2))/(2*a1*a2))</code></label>
-        <label id="i7"><code>θ2=arctan(a2sin(θ1)*px-(-py(a1+a2cos(θ1)))/(px(a1+a2cos(θ1))-py*a2sin(θ1)))</code></label>
+        <label id="i7"><code>θ2=arctan(a2sin(θ1)*px-(-py(a1+a2cos(θ1))/(px(a1+a2cos(θ1))-py*a2sin(θ1)))</code></label>
         <label id="i8"><code>d3=d1-d4-pz</code></label>
 
     </div>
