--- a/index.html
+++ b/index.html
@@ -450,15 +450,15 @@
                 and see joints moving accordingly.</label>
             <div>
                 <label>Position X:</label>
-                <input  type="number" placeholder="Coordinate(cm)">                
+                <input  type="number" placeholder="Coordinate(mm)">                
             </div>
             <div>
                 <label>Position Y:</label>
-                <input  type="number" placeholder="Coordinate(cm)">                
+                <input  type="number" placeholder="Coordinate(mm)">                
             </div>
             <div>
                 <label>Position Z:</label>
-                <input  type="number" placeholder="Coordinate(cm)">                
+                <input  type="number" placeholder="Coordinate(mm)">                
             </div>
             <button id="submit_inverse">Submit</button>
         </div>
